--- a/march-update/css/main.scss
+++ b/march-update/css/main.scss
@@ -539,7 +539,7 @@ footer i:hover{
   display: flex;
   display: -webkit-flex;
   justify-content: center;
-  padding: 6rem 0 3rem 0;
+  padding: 2rem 0 1rem 0;
   font-family: $font-sans;
   font-weight: bold;
   font-size: 2rem;
@@ -547,7 +547,7 @@ footer i:hover{
   border-radius: 10px 10px 0 0;
 }
 .card-copy{
-  padding: 2rem;
+  padding: 1rem 2rem;
   line-height: 1.25;
 }
 .card-tags{
@@ -566,7 +566,7 @@ footer i:hover{
   text-transform: none;
   font-size: 1.25rem;
   margin: $base-margin;
-  padding: .5rem 0;
+  padding: .25rem 0;
   background-color: $dark-base;
   color: $light-accent;
 }
@@ -636,6 +636,121 @@ footer i:hover{
 }
 .phase-copy{
   margin: $base-margin;
+}
+/* ==========================================================================
+   WORK WITH ME
+   ========================================================================== */
+.work-with-me-wrapper{
+  background: url("../img/work-with-bg.jpeg") no-repeat top left;
+  background-size: cover;
+  height: 100vh;
+  max-width: 500px;
+  .gray-alt{
+    background: rgba(242, 242, 242, 0.75);
+  }
+}
+
+.wwm-main-content{
+  display: flex;
+  display: -webkit-flex;
+  align-items: center;
+  justify-content: center;
+  flex-flow: row wrap;
+  height: 90%;
+  color: $dark-base;
+}
+
+.wwm-intro{
+  font-family: $font-display;
+  font-size: 2.5rem;
+}
+
+
+.wwm-sales{
+
+}
+
+.wwm-sales-wrapper{
+  width: 80%;
+  margin: 0 10%;
+  padding: 5% 0;
+  text-align: center;
+
+  header{
+    margin: 0 0 5% 0;
+  }
+
+  p{
+    margin: 5% 0;
+    line-height: 1.4;
+  }
+  .packages-btn p{
+    margin: 1.25% 0;
+  }
+}
+
+.wwm-header{
+  background-color: $light-accent;
+  padding: 10% 0;
+  text-align: center;
+  h2{
+    width: 80%;
+    margin: 0 10%;
+  }
+}
+
+.wwm-subheader{
+    font-family: $font-sans;
+    font-size: 1.5rem;
+}
+
+.wwm-familiar{
+  
+}
+
+.wwm-solution{
+  text-align: center;
+  background-color: $dark-accent;
+  color: white;
+}
+
+.wwm-packages{
+
+}
+
+.wwm-choose-aleia{
+  background-color: $dark-base;
+
+  p{
+    font-family: $font-sans-light;
+    line-height: 1.3;
+  }
+  .choose-header{
+    font-size: 1.3rem;
+}
+}
+
+.wwm-who{
+  background-color: $dark-accent;
+  color: white;
+}
+
+.wwm-faq{
+  .question{
+    font-family: $font-sans;
+  }
+
+  p{
+
+  }
+
+  .question-line{
+    width: 100%;
+    height: .25rem;
+    background-color: $text-base;
+    margin: 10% 0;
+  }
+
 }
 /* ==========================================================================
    404
@@ -788,6 +903,7 @@ footer i:hover{
 
 @media only screen and (min-width: 768px) {
     /* Style adjustments for viewports that meet the condition */
+
 // HEADER
 .logo{
   width: 10%;
@@ -829,8 +945,7 @@ footer i:hover{
 .card-wrapper{
   display: flex;
   display: -webkit-flex;
-  flex-flow: row wrap;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 .card{
   width: 45%;
@@ -849,12 +964,42 @@ footer i:hover{
   margin: 2.5% 0;
   width: 50%;
 }
+// WORK WITH ME
+.work-with-me-wrapper{
+  max-width: 1000px;
+}
+.wwm-intro{
+  font-size: 3.5rem;
+  width: 100%;
+  text-align: center;
+}
+
+.wwm-description{
+  font-size: 2rem;
+  width: 100%;
+  text-align: center;
+}
+
+.wwm-header{
+  font-size: 3.5rem;
+}
+
+.wwm-sales-wrapper p{
+  line-height: 1.3;
+  margin: 2.5% 0;
+}
+
+.wwm-faq{
+.question-line{
+  margin: 2.5% 0;
+}
+}
 // 404
 .not-found-main{
     padding: 2vh 4vh;
 }
 }
-@media only screen and (min-width: 1280px) {
+@media only screen and (min-width: 1200px) {
 // FOOTER
 footer{
   padding: .5em 0;
@@ -888,16 +1033,55 @@ footer{
 .current-bio{
   padding: 2.5%;
 }
+//WORK WITH ME
+.wwm-main-content{
+  height: 50%;
+  color: white;
+}
+
+.wwm-header{
+  padding: 5% 0;
+}
+
+.work-with-me-wrapper{
+  max-width: none;
+}
+
+.card{
+  width: 85%;
+}
+
+.wwwm-row-wrapper{
+  display: flex;
+  display: -webkit-flex;
+  justify-content: space-between;
+  align-content: center;
+}
+
+.wwm-card-row{
+  display: flex;
+  display: -webkit-flex;
+  align-content: center;
+  justify-content: center;
+  align-content: center;
+  flex-flow: wrap row;
+  padding: 2.5%;
+}
+
+.wwm-card-row{
+  width: 40%;
+}
+
+.wwm-sales-wrapper{
+  width: 60%;
+  margin: 0 20%;
+}
+
 // PACKAGES
-.top-shotta,
 .entry-package{
   width: 100%;
 }
-.top-shotta{
-  .card-title{
-  padding: 5rem 0 2.5rem 0;
-}
-}
+
 .entry-package{
   .card-title{
   padding: 5rem 0 2.5rem 0;
