--- a/march-update/css/main.css
+++ b/march-update/css/main.css
@@ -749,16 +749,12 @@ footer i:hover {
     margin: 0 0 2.5% 0;
     color: #011627;
     font-size: 1.5rem; }
-  #mc_embed_signup #mce-EMAIL {
-    width: 100%;
-    box-sizing: border-box;
-    text-align: center; }
-  #mc_embed_signup .button {
+  #mc_embed_signup button {
     font-family: "Montserrat Light", sans-serif;
     background-color: #011627;
+    font-size: 1.25rem;
     border: none;
     text-transform: uppercase;
-    margin: 2.5% 0 0 0;
     padding: 2.5% 1.25%;
     width: 100%;
     box-sizing: border-box;
@@ -921,7 +917,12 @@ footer i:hover {
     padding: 2vh 4vh; }
 
   .opt-in {
-    padding: 2.5% 0; } }
+    padding: 2.5% 0; }
+
+  #mc_embed_signup {
+    width: 70%; }
+    #mc_embed_signup button {
+      font-size: 1.5rem; } }
 @media only screen and (min-width: 1200px) {
   footer {
     padding: .5em 0; }
@@ -1030,10 +1031,12 @@ footer i:hover {
       width: 45%; }
     #mc_embed_signup #mce-EMAIL {
       width: 100%; }
-    #mc_embed_signup .button {
-      margin: 1.25% 0 0 0;
-      padding: 1.25% 0;
-      width: 100%; } }
+    #mc_embed_signup button {
+      margin: 0;
+      width: 100%; }
+      #mc_embed_signup button p {
+        padding: 1.25% 15%;
+        white-space: nowrap; } }
 @media print, (-webkit-min-device-pixel-ratio: 1.25), (min-resolution: 1.25dppx), (min-resolution: 120dpi) {
   /* Style adjustments for high resolution devices */ }
 /* ==========================================================================
