--- a/march-update/css/main.scss
+++ b/march-update/css/main.scss
@@ -843,17 +843,12 @@ footer i:hover{
     color: $dark-base;
     font-size: 1.5rem;
   }
-  #mce-EMAIL{
-    width: 100%;
-    box-sizing: border-box;
-    text-align: center;
-  }
-  .button{
+  button{
     font-family: $font-sans-light;
     background-color: $dark-base;
+    font-size: 1.25rem;
     border: none;
     text-transform: uppercase;
-    margin: 2.5% 0 0 0;
     padding: 2.5% 1.25%;
     width: 100%;
     box-sizing: border-box;
@@ -1047,6 +1042,13 @@ footer i:hover{
   padding: 2.5% 0;
 }
 
+#mc_embed_signup{
+  width: 70%;
+  button{
+    font-size: 1.5rem;
+  }
+}
+
 }
 @media only screen and (min-width: 1200px) {
 // FOOTER
@@ -1179,10 +1181,13 @@ footer{
   #mce-EMAIL{
     width: 100%;
   }
-  .button{
-    margin: 1.25% 0 0 0;
-    padding: 1.25% 0;
+  button{
+    margin: 0;
     width: 100%;
+    p{
+      padding: 1.25% 15%;
+      white-space: nowrap;
+    }
   }
 }
 }
