--- a/march-update/css/main.scss
+++ b/march-update/css/main.scss
@@ -248,7 +248,7 @@ body{
     background-color: white;
     font-family: $font-body;
     font-size: 16px;
-    color: $standard-grey;
+    color: $main-color;
 }
 
 main{
@@ -282,6 +282,40 @@ main{
 
 .logo{
   width: 25%;
+}
+
+/* ==========================================================================
+   MENU STYLES
+   ========================================================================== */
+#menu-main{ 
+  display: none;
+}
+.menu-active li{
+  display: block;
+  margin: .5rem 0;
+  display: flex;
+  display: -webkit-flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: wrap column
+}
+
+.spacer{
+  width: 25vw;
+  height: .375rem;
+  background-color: $accent-color;
+}
+.menu-wrapper{
+  display: flex;
+  display: -webkit-flex;
+  justify-content: center;
+  align-items: center;
+  background-color: $main-color;
+  color: $accent-color;
+  @include font-display;
+  height: 90vh;
+  font-size: 2.5rem;
+  text-align: center;
 }
 
 
@@ -428,191 +462,95 @@ footer i:hover{
 /* ==========================================================================
    Main Body
    ========================================================================== */
-// .intro-body{
-//   font-family: $font-sans;
-//   width: 100%;    
-// }
-// .main-container{
-//   width: 100%;
-//   // height: 75vh;
-//   display: flex;
-//   display: -webkit-flex;
-//   align-items: center;
-//   justify-content: space-between;
-//   flex-direction: column;
-//   padding: 7.5vh 0;
-// }
-// .hire-intro{
-//   width: 100%;
-//   // height: 25vh;
-//   display: flex;
-//   display: -webkit-flex;
-//   align-items: center;
-//   justify-content: space-between;
-//   flex-direction: column;
-// }
-// .hire-me{
-//   width: 60%;
-//   margin: 5% 0;
-// }
-// .hire-me button{
-//   color: $dark-base;
-//   padding: .25em 0;
-// }
-// .hire-copy{
-//   line-height: 1.25em;
-//   padding: 0.5em 0;
-// }
-// .links{
-//   line-height: 2.5;
-//   font-family: $font-sans-light;
-// }
-// .links a{
-//   color: $dark-accent;    
-//   font-family: $font-sans;
-// }
 
 /* ==========================================================================
    ABOUT PAGE
    ========================================================================== */
-// .light-alt{
-//   background-color: $light-accent;
-//   color: $main-color;
-// }
-// .gray-alt{
-//   background-color: $light-base;
-//   color: $main-color;
-// }
-// .about-aleia{
-//   height: 35vh;
-// }
-// .about-dev{
-//   height: 45vh;
-// }
-// .about-aleia,
-// .about-dev{
-//   display: flex;
-//   display: -webkit-flex;
-//   align-items: center;  
-// }
-// .about-aleia{
-//   background-color: $light-accent;
-//   color: $dark-base;
-// }
-// .about-dev{
-//   background-color: $dark-base;
-//   color: $light-accent;
-// }
-// .title{
-//   font-family: $font-display;  
-//   margin: 0 0 0 20vw;
-// }
-// .title header{
-//   font-size: 3rem;
-// }
-// .aleia-title-display{
-//     color: $dark-base;
-// }
-// .dev-title-display{
-//     color: $light-accent;
-// }
-// .title-sans{
-//   font-family: $font-sans;
-//   color: $dark-accent;
-//   font-weight: bold;
-// }
-/* ==========================================================================
-   ABOUT SUB-PAGES
-   ========================================================================== */
-// .about-aleia-subpage{
-//   background-color: $light-base;
-//   color: $text-base;
-//   font-family: $font-serif;
-// }
-// .subpage-container{
-//   display: flex;
-//   display: -webkit-flex;
-//   flex-wrap: row wrap;
-//   -webkit-flex-flow: row wrap;
-//   align-items: center;
-//   justify-content: center;
-// }
-// // ABOUT ALEIA
-// .about-me-copy{
-//   width: 80%;
-//   line-height: 1.5;
-// }
-// .aleia-intro{
-//   font-family: $font-sans;
-//   font-weight: bold;
-//   color: $dark-base;
-//   font-size: 3rem;
-//   margin: $base-margin;
-// }
-// .spacer-a{
-//   background-color: white;
-//   height: .125rem;
-// }
-// .aleia-tagline,
-// .edu-bio{
-//   margin: $base-margin;
-//   line-height: 1.25;
-// }
-// .current-bio{
-//   background-color:rgba(239, 255, 233, .5);
-//   padding: 5%;
-//   margin: 1.25% 0;
-// }
-// .bio-title{
-//   font-size: 1.5rem;
-//   line-height: 2;
-// }
-// .bio-copy{
-//   width: 90%;
-// }
-// .spacer-b{
-//   background-color: $dark-accent;
-//   height: .25rem;
-// }
-// .future{
-//   font-size: 2rem;
-//   margin: $base-margin;
-// }
-// .likes-para{
-//   margin: $base-margin;
-//   line-height: 1.25;
-// }
-// .likes:hover{
-//   background-color:rgba(49, 196, 182, .75);
-//   font-weight: bold;
-//   color: white;
-// }
-// .aleia-link{
-//   font-family: $font-sans;
-//   font-weight: bold;
-//   color: $dark-base;
-//   font-size: 1.5rem;
-//   margin: $base-margin;
-// }
-// // ALEIA + DEV
-// .subpage-container figure{
-//   margin: 2.5% 0;
-// }
-// .subpage-container figure img{
-//   width: 100%;
-// }
-// .figure-duo img{
-//   width: 95%;
-//   height: auto;
-//   display: flex;
-//   display: -webkit-flex;
-//   align-content: space-around;
-// }
-// .dev-tagline,
-// .flex-copy
-// {
-//   margin: $base-margin;
-// }
+#about{
+  .intro-name{
+    color: $standard-grey;
+  }
+  .welcome{
+    .welcome-photos{
+      figure{
+        max-width: 300px;
+      }
+    }
+    .welcome-info{
+      text-align: center;
+    }
+  }
+}
+
+.about-copy{
+  display: flex;
+  display: -webkit-flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+  flex-wrap: wrap;
+  .about-copy-wrapper{
+    width: 80%;
+    margin: 5% 0;
+    color: $main-color;
+    aside{
+      display: flex;
+      display: -webkit-flex;
+      flex-wrap: wrap;
+      flex-direction: column;
+      .about-aside-photo{
+        background: url(../img/aleia-3.jpg) no-repeat center;
+        background-size: cover;
+        height: 20rem;
+        max-height: 400px;
+        border: $main-color solid 5px;
+        img{
+          width: 100%;
+        }
+      }
+    }
+    h1{
+      @include font-display;
+      font-size: 3.25rem;
+    }
+    p{
+      line-height: 1.4;
+      margin: 1rem 0;
+    }
+  }
+  ul{
+    margin-left: 1rem;
+    li{
+      list-style: square outside none;
+      display: list-item;
+    }
+  }
+}
+
+.about-spacer{
+  background-color: $secondary-color;
+  height: .25rem;
+  width: 33%;
+  margin-bottom: 1rem;
+}
+
+.about-p-accent{
+  color: $secondary-color;
+  font-weight: 700;
+}
+
+.list-lead-in{
+  margin: 0;
+  line-height: 1;
+}
+
+.about-list{
+  p{
+    margin: 0;
+    line-height: 1;
+  }
+}
+
 /* ==========================================================================
    PACKAGES
    ========================================================================== */
@@ -907,39 +845,6 @@ footer i:hover{
 //   }
 // }
 // }
-/* ==========================================================================
-   MENU STYLES
-   ========================================================================== */
-#menu-main{ 
-  display: none;
-}
-.menu-active li{
-  display: block;
-  margin: .5rem 0;
-  display: flex;
-  display: -webkit-flex;
-  justify-content: center;
-  align-items: center;
-  flex-flow: wrap column
-}
-
-.spacer{
-  width: 25vw;
-  height: .375rem;
-  background-color: $accent-color;
-}
-.menu-wrapper{
-  display: flex;
-  display: -webkit-flex;
-  justify-content: center;
-  align-items: center;
-  background-color: $main-color;
-  color: $accent-color;
-  @include font-display;
-  height: 90vh;
-  font-size: 2.5rem;
-  text-align: center;
-}
 
 
 /* ==========================================================================
@@ -1042,20 +947,24 @@ footer i:hover{
   margin: 0 1.25%;
 }
 
-// // ABOUT PAGES
-// .subpage-container figure img{
-//   width: 50%;
-//   height: auto;
-// }
-// .duo{
-//   display: flex;
-//   display: -webkit-flex;
-//   flex-wrap: nowrap;
-//   justify-content: space-around;
-// }
-// .duo figure img{
-//   width: 95%;
-// }
+// ABOUT PAGES
+  .about-copy-wrapper{
+    aside{
+
+      flex-direction: row;
+      flex-wrap: nowrap;
+      .about-aside-copy{
+        width: 45%;
+      }
+      .about-aside-photo{
+        width: 45%;
+        
+      }
+    }
+}
+
+
+
 // // PACKAGES
 // .packages-wrapper{
 //   font-size: 1.25rem;
@@ -1171,16 +1080,16 @@ footer{
 }
 
 // HOMEPAGE HERO
-.intro-body{
-  font-size: 1.25rem;
-}
-.hire-intro{
-  flex-direction: row;
-  justify-content: space-around;
-}
-.hire-me{
-  width: 35%;
-}
+// .intro-body{
+//   font-size: 1.25rem;
+// }
+// .hire-intro{
+//   flex-direction: row;
+//   justify-content: space-around;
+// }
+// .hire-me{
+//   width: 35%;
+// }
 
 // // ABOUT PAGE
 // .current-bio{
