--- a/march-update/css/main.scss
+++ b/march-update/css/main.scss
@@ -489,6 +489,7 @@ footer i:hover{
   align-items: center;
   width: 100%;
   flex-wrap: wrap;
+  flex-direction: row;
   .about-copy-wrapper{
     width: 80%;
     margin: 5% 0;
@@ -497,17 +498,23 @@ footer i:hover{
       display: flex;
       display: -webkit-flex;
       flex-wrap: wrap;
-      flex-direction: column;
+      .about-aside-copy{
+        flex: 1 300px;
+      }
       .about-aside-photo{
         background: url(../img/aleia-3.jpg) no-repeat center;
         background-size: cover;
         height: 20rem;
         max-height: 400px;
         border: $main-color solid 5px;
+        flex: 1 300px;
         img{
           width: 100%;
         }
       }
+    }
+      #mc_embed_signup{
+        margin: 0;
     }
     h1{
       @include font-display;
@@ -515,7 +522,7 @@ footer i:hover{
     }
     p{
       line-height: 1.4;
-      margin: 1rem 0;
+      margin: 0 0 1rem 0;
     }
   }
   ul{
@@ -545,8 +552,12 @@ footer i:hover{
 }
 
 .about-list{
+  h3{
+    font-weight: 700;
+    line-height: 2;
+    text-transform: uppercase;
+  }
   p{
-    margin: 0;
     line-height: 1;
   }
 }
@@ -950,15 +961,8 @@ footer i:hover{
 // ABOUT PAGES
   .about-copy-wrapper{
     aside{
-
-      flex-direction: row;
-      flex-wrap: nowrap;
-      .about-aside-copy{
-        width: 45%;
-      }
       .about-aside-photo{
-        width: 45%;
-        
+        margin-left: .5rem;
       }
     }
 }
