--- a/march-update/css/main.scss
+++ b/march-update/css/main.scss
@@ -253,7 +253,7 @@ body{
 
 main{
   background-color: white;
-  color: $standard-grey;
+  color: $main-color;
 }
 
 .homepage{
@@ -466,7 +466,7 @@ footer i:hover{
 /* ==========================================================================
    ABOUT PAGE
    ========================================================================== */
-#about{
+#about, #wwm{
   .intro-name{
     color: $standard-grey;
   }
@@ -560,6 +560,118 @@ footer i:hover{
   p{
     line-height: 1;
   }
+}
+
+/* ==========================================================================
+   WORK WITH ME
+   ========================================================================== */
+.wwm{
+  display: flex;
+  display: -webkit-flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+  flex-wrap: wrap;
+  flex-direction: row;
+    .about-spacer{
+      width: 36%;
+    }
+    .wwm-wrapper{
+      width: 80%;
+      margin: 5% 0;
+        h1{
+          @include font-display;
+          font-size: 3.25rem;
+        }
+        p{
+          line-height: 1.4;
+          margin-bottom: 1rem; 
+        }
+    }
+}
+
+.wwm-subheader{
+  font-weight: 700;
+  font-size: 1.5rem;
+  line-height: 2;
+}
+
+
+.wwm-who{
+  margin: 5% 0;
+  aside{
+    display: flex;
+    display: -webkit-flex;
+    flex-wrap: wrap;
+    align-items: center;
+      .about-aside-copy{
+        flex: 1 400px;
+      }
+      .about-aside-photo{
+        background: url(../img/wwm.jpeg) no-repeat center;
+        background-size: cover;
+        height: 20rem;
+        max-height: 400px;
+        border: $main-color solid 5px;
+        flex: 1 300px;
+        margin-left: 2%;
+          img{
+            width: 100%;
+          }
+        }
+    }
+}
+
+.question{
+  font-weight: 700;
+}
+
+.question-line{
+  width: 100%;
+  height: .25rem;
+  background-color: $main-color;
+  margin: 2.5% 0;
+}
+
+.wwm-faq{
+  background-color: $accent-grey;
+  .wwm-faq-wrapper{
+    width: 90%;
+    padding: 5%;
+  }
+}
+
+.packages{
+  display: flex;
+  display: -webkit-flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  text-align: center;
+    #card-left{
+      margin-right: 20%;
+    }
+    header{
+      font-weight: 700;
+      color: $secondary-color;
+      text-transform: uppercase;
+      font-size: 2rem;
+      line-height: 1.5;
+    }
+}
+
+.package-card{
+  flex: 1 400px;
+  width: 45%;
+  max-width: 350px;
+  height: 20%;
+  max-height: 600px;
+  background-color: $accent-grey;
+
+  .package-card-wrapper{
+    width: 60%;
+    padding: 15% 20%;
+  }
+
 }
 
 /* ==========================================================================
